demoOrg/objects/CBGA_Story_Answer__c.object
<CustomObject>
    <description>User Selected Answer for the Story</description>
    <fields>
        <fullName>CB_Block_Cost__c</fullName>
        <description>Cost of the Block for this Story</description>
        <inlineHelpText>Cost of the Block for this Story</inlineHelpText>
        <label>Block Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_Game_User__c</fullName>
        <label>Game User</label>
        <referenceTo>CBGA_Game_User__c</referenceTo>
        <relationshipLabel>Story Answer</relationshipLabel>
        <relationshipName>CB_Game_User</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CB_Solution_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The solution, user has selected for their story.</description>
        <inlineHelpText>The solution, user has selected for their story.</inlineHelpText>
        <label>Solution Option</label>
        <referenceTo>CBGA_Solution_Option__c</referenceTo>
        <relationshipLabel>Story Answer</relationshipLabel>
        <relationshipName>Solution_Option</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>CBGA_Story__c</referenceTo>
        <relationshipLabel>Story Answer</relationshipLabel>
        <relationshipName>Story_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Won__c</fullName>
        <description>Amount won by the user, on selecting the option</description>
        <inlineHelpText>Amount won by the user, on selecting the option.</inlineHelpText>
        <label>Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Story Answer</label>
    <nameField>
        <displayFormat>Story Answer - {0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Story Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>